--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "dffb7669-8cd4-4628-99dd-7694e356ba37"
 authors = ["Amauri Martins"]
 version = "1.0.0-DEV"
 
+[deps]
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+
 [compat]
+Measurements = "2.11.0"
 julia = "1.6.7"
 
 [extras]
