--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,5 +37,7 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v2
+      - name: Install dependencies
+        run: julia deps.jl
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
