--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,26 @@ authors = ["Amauri Martins"]
 version = "1.0.0-DEV"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+CSV = "0.10.15"
+ColorSchemes = "3.27.1"
+Colors = "0.13.0"
+DataFrames = "1.7.0"
+LinearAlgebra = "1.11.0"
 Measurements = "2.11.0"
+Plots = "1.40.9"
+SpecialFunctions = "2.5.0"
+Statistics = "1.11.1"
 julia = "1.6.7"
 
 [extras]
