--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
@@ -26,6 +27,7 @@ LinearAlgebra = "1.11.0"
 Measurements = "2.11.0"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
+Serialization = "1.11.0"
 SpecialFunctions = "2.5.0"
 Statistics = "1.11.1"
 julia = "1.6.7"
