--- a/Project.toml
+++ b/Project.toml
@@ -9,11 +9,13 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -24,11 +26,13 @@ ColorSchemes = "3.27.1"
 Colors = "0.13.0"
 DataFrames = "1.7.0"
 DataStructures = "0.18.20"
+DelimitedFiles = "1.9.1"
 Gmsh = "0.3.1"
 LinearAlgebra = "1.11.0"
 Measurements = "2.11.0"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
+Revise = "3.7.2"
 Serialization = "1.11.0"
 SpecialFunctions = "2.5.0"
 Statistics = "1.11.1"
