--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
@@ -27,6 +28,7 @@ Colors = "0.13.0"
 DataFrames = "1.7.0"
 DataStructures = "0.18.20"
 DelimitedFiles = "1.9.1"
+EzXML = "1.2.0"
 Gmsh = "0.3.1"
 LinearAlgebra = "1.11.0"
 Measurements = "2.11.0"
