--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "LineCableToolbox"
+name = "LineCableModels"
 uuid = "dffb7669-8cd4-4628-99dd-7694e356ba37"
 authors = ["Amauri Martins"]
 version = "1.0.0-DEV"
@@ -9,6 +9,7 @@ ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
@@ -27,6 +28,7 @@ ColorSchemes = "3.27.1"
 Colors = "0.13.0"
 DataFrames = "1.7.0"
 DataStructures = "0.18.20"
+Dates = "1.11.0"
 DelimitedFiles = "1.9.1"
 EzXML = "1.2.0"
 Gmsh = "0.3.1"
