feat: add main process for LineCableModels and remove obsolete CableDesign files; update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ projects/*/cables_library.jls
 projects/*/materials_library.csv
 projects/*/*.pscx
 projects/*/data/
+projects/confidential_*
+*.ipynb
