--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-LineCableToolbox = "dffb7669-8cd4-4628-99dd-7694e356ba37"
+DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
+LineCableModels = "dffb7669-8cd4-4628-99dd-7694e356ba37"
