--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,5 +5,6 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
 LineCableModels = "dffb7669-8cd4-4628-99dd-7694e356ba37"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
