fix: update export function to return filename, enhance tutorial clarity, and improve dependency management

--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,6 @@ temp/
 bibliography/
 presentations/
 projects/
-examples/MeasuredDims.jl
-examples/*.jls
-examples/*.csv
-examples/*.pscx
-examples/data/
 *.ipynb
-# the secret shame folder
+# the secret folder of shame
 local/ 
