--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,8 @@
 name = "LineCableModels"
 uuid = "dffb7669-8cd4-4628-99dd-7694e356ba37"
 authors = ["Amauri Martins"]
-version = "1.0.0-DEV"
 git_url = "https://github.com/Electa-Git/LineCableModels.jl"
+version = "1.0.0-DEV"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -12,6 +12,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
@@ -34,6 +35,7 @@ DataFrames = "1.7.0"
 DataStructures = "0.18.20"
 Dates = "1.11.0"
 DelimitedFiles = "1.9.1"
+DisplayAs = "0.1.6"
 DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
