--- a/.github/workflows/make-docs.yml
+++ b/.github/workflows/make-docs.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           version: '1.11'
       - name: Install Dependencies
-        run: julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate(); ENV["GKSwstype"]="100";'
+        run: julia --project=docs -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate();'
       - name: Build and Deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
