--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
+JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
@@ -40,6 +41,7 @@ DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
 Gmsh = "0.3.1"
+JSON3 = "1.14.2"
 LinearAlgebra = "1.11.0"
 Measurements = "2.11.0"
 PlotlyJS = "0.18.15"
@@ -49,7 +51,6 @@ Revise = "3.7.2"
 Serialization = "1.11.0"
 SpecialFunctions = "2.5.0"
 Statistics = "1.11.1"
-julia = "1.6.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
