--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -42,6 +43,7 @@ Gmsh = "0.3.1"
 JSON3 = "1.14.2"
 LinearAlgebra = "1.11.0"
 Measurements = "2.11.0"
+Pkg = "1.11.0"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
 Reexport = "1.2.2"
