--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,6 @@ jobs:
       matrix:
         version:
           - '1.11'
-#          - '1.6'
           - 'pre'
         os:
           - ubuntu-latest
@@ -33,10 +32,34 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
+      - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v2
+      - uses: actions/cache@v3
+        env:
+          cache-name: cache-artifacts
+        with:
+          path: ~/.julia/artifacts
+          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-test-${{ env.cache-name }}-
+            ${{ runner.os }}-test-
+            ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
+        with:
+          annotate: true
+      - uses: julia-actions/julia-processcoverage@v1
+      # - uses: codecov/codecov-action@v3
+      #   with:
+      #     file: lcov.info
+    # steps:
+    #   - uses: actions/checkout@v4
+    #   - uses: julia-actions/setup-julia@v2
+    #     with:
+    #       version: ${{ matrix.version }}
+    #       arch: ${{ matrix.arch }}
+    #   - uses: julia-actions/cache@v2
+    #   - uses: julia-actions/julia-buildpkg@v1
+    #   - uses: julia-actions/julia-runtest@v1
