--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,5 +1,7 @@
 [deps]
+Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 LineCableModels = "dffb7669-8cd4-4628-99dd-7694e356ba37"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
