--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,3 +5,4 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
