--- a/test/Project.toml
+++ b/test/Project.toml
@@ -6,3 +6,6 @@ SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
