--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -46,6 +47,7 @@ Measurements = "2.11.0"
 Pkg = "1.11.0"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
+Printf = "1.11.0"
 Reexport = "1.2.2"
 Revise = "3.7.2"
 Serialization = "1.11.0"
@@ -60,6 +62,7 @@ Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
+HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
@@ -75,7 +78,6 @@ SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 SymSpellChecker = "bb1b64e9-0ccc-445c-80cb-5313b9f7dfe1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
-HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 
 [targets]
 dev = ["ArgParse", "BenchmarkTools", "Infiltrator", "JET", "JuliaFormatter", "LocalRegistry", "ProfileView", "Revise", "SymSpellChecker", "TestItemRunner"]
