Fixed meshing issues and stuff.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,7 +23,7 @@
                 "clear": true,
                 "close": true
             },
-            "command": "julia --project -e 'include(\"docs/setup.jl\"); include(\"docs/make.jl\")'",
+            "command": "cd docs && julia --project=. -e \"using Pkg; Pkg.develop(PackageSpec(path=\\\"..\\\")); Pkg.instantiate()\" && julia --project=. make.jl",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
