--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,6 @@ DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
-GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -23,6 +22,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -30,6 +30,10 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
+
+[sources]
+GetDP = {url = "https://github.com/Electa-Git/GetDP.jl", rev="main"}
 
 [compat]
 CSV = "0.10.15"
@@ -42,7 +46,6 @@ DisplayAs = "0.1.6"
 DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
-GetDP = "0.1.0"
 Gmsh = "0.3.1"
 HypertextLiteral = "0.9.5"
 JSON3 = "1.14.2"
@@ -51,6 +54,7 @@ Logging = "1.11.0"
 LoggingExtras = "1.1.0"
 Measurements = "2.11.0"
 Pkg = "1.11.0"
+PkgTemplates = "0.7.56"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
 Printf = "1.11.0"
@@ -87,5 +91,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 
 [targets]
 dev = ["ArgParse", "BenchmarkTools", "Infiltrator", "JET", "JuliaFormatter", "LocalRegistry", "ProfileView", "Revise", "SymSpellChecker", "TestItemRunner"]
-docs = ["Pluto", "PlutoUI", "Changelog", "DisplayAs", "Documenter", "DocumenterCitations", "Literate", "HypertextLiteral", "DataFrames", "Plots", "PlotlyJS", "JSON3"]
 test = ["Test", "Coverage"]
