--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -8,6 +8,7 @@ DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
 GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [sources]
 GetDP = {url = "https://github.com/Electa-Git/GetDP.jl", rev = "main"}
