--- a/Project.toml
+++ b/Project.toml
@@ -47,7 +47,6 @@ DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
 Gmsh = "0.3.1"
-HypertextLiteral = "0.9.5"
 JSON3 = "1.14.2"
 LinearAlgebra = "1.11.0"
 Logging = "1.11.0"
@@ -59,36 +58,14 @@ PlotlyJS = "0.18.15"
 Plots = "1.40.9"
 Printf = "1.11.0"
 Reexport = "1.2.2"
-Revise = "3.7.2"
 Serialization = "1.11.0"
 SpecialFunctions = "2.5.0"
 Statistics = "1.11.1"
 
 [extras]
-ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-Changelog = "5217a498-cd5d-4ec6-b8c2-9b85a09b6e3e"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
-DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
-DocumenterCitations = "daee34ce-89f3-4625-b898-19384cb65244"
-HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
-Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
-JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
-JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
-Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
-LocalRegistry = "89398ba2-070a-4b16-a995-9893c55d93cf"
-PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
-PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
-ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
-SymSpellChecker = "bb1b64e9-0ccc-445c-80cb-5313b9f7dfe1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 
 [targets]
-dev = ["ArgParse", "BenchmarkTools", "Infiltrator", "JET", "JuliaFormatter", "LocalRegistry", "ProfileView", "Revise", "SymSpellChecker", "TestItemRunner"]
-test = ["Test", "Coverage"]
+test = ["Test", "Coverage", "SafeTestsets"]
