--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
                 "panel": "new",
                 "reveal": "always"
             },
-            "command": "julia --project=test -e 'include(\"test/runtests.jl\")'",
+            "command": "julia --project=. -e \"using Pkg; Pkg.test()\"",
             "problemMatcher": [],
             "type": "shell",
             "group": {
