feat(Project.toml): add Functors dependency to project

--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ DisplayAs = "0b91fe84-8a4c-11e9-3e1d-67c38462b6d6"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
+Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
@@ -47,6 +48,7 @@ DisplayAs = "0.1.6"
 DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
+Functors = "0.5.2"
 Gmsh = "0.3.1"
 JSON3 = "1.14.2"
 LinearAlgebra = "1.11.0"
