--- a/Project.toml
+++ b/Project.toml
@@ -70,6 +70,7 @@ Statistics = "1.11.1"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 
 [targets]
-test = ["Test", "Coverage", "SafeTestsets"]
+test = ["Test", "Coverage", "SafeTestsets", "TestItemRunner"]
