chore(vscode): update files.exclude in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,10 @@
-{}
+{
+    "files.exclude": {
+        "**/.github": true,
+        "**/.vscode": true,
+        "**/@INPROGRESS": true,
+        "**/docs": true,
+        "**/examples": true,
+        "**/test": true
+    }
+}
