chore(gitignore): add legacy and .vscode/ to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ Manifest.toml
 # the hidden folder of shame
 temp/
 @INPROGRESS/
+legacy/
 
 # Internal files
 dev
@@ -51,3 +52,4 @@ sprint
 .github/prompts
 test/jl_*
 *.sh
+.vscode/
