--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.1-DEV"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Calculus = "49dc2e85-a5d0-5ad3-a950-438e2897f1b9"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -29,6 +30,7 @@ PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -39,6 +41,7 @@ GetDP = {rev = "main", url = "https://github.com/Electa-Git/GetDP.jl"}
 
 [compat]
 CSV = "0.10.15"
+Calculus = "0.5.2"
 ColorSchemes = "3.27.1"
 Colors = "0.13.0"
 DataFrames = "1.7.0"
@@ -61,6 +64,7 @@ PkgTemplates = "0.7.56"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
 Printf = "1.11.0"
+QuadGK = "2.11.2"
 Reexport = "1.2.2"
 Serialization = "1.11.0"
 SpecialFunctions = "2.5.0"
