fix(showcase): update repository configuration and kernel options in slides

--- a/docs/showcase/slides/_quarto.yml
+++ b/docs/showcase/slides/_quarto.yml
@@ -7,6 +7,8 @@ metadata:
 
 format:
   revealjs:
+    thebe: true
+    code-tools: true
     theme: [default, assets/corporate.scss]
     slide-number: true
     controls: true
@@ -17,4 +19,3 @@ format:
 
 execute:
   freeze: auto
-
