--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
 Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
+GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
 GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
@@ -29,6 +30,7 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PolygonOps = "647866c9-e3ac-4575-94e7-e3d426903924"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
@@ -52,6 +54,7 @@ DocStringExtensions = "0.9.3"
 EzXML = "1.2.0"
 ForceImport = "0.0.3"
 Functors = "0.5.2"
+GeometryBasics = "0.5.10"
 Gmsh = "0.3.1"
 JSON3 = "1.14.2"
 LinearAlgebra = "1.11.0"
@@ -63,6 +66,7 @@ Pkg = "1.11.0"
 PkgTemplates = "0.7.56"
 PlotlyJS = "0.18.15"
 Plots = "1.40.9"
+PolygonOps = "0.1.2"
 Printf = "1.11.0"
 QuadGK = "2.11.2"
 Reexport = "1.2.2"
