--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,9 +1,8 @@
 # Python packages for Binder (classic Notebook + RISE + widgets)
-# Pin Notebook 6.x because RISE does not support Notebook 7.
 
-notebook==6.5.7
-nbclassic>=1.0.0
-rise==5.7.1
-ipywidgets==8.1.3
-widgetsnbextension==4.0.11
-jupyterlab>=4
+notebook
+rise
+ipywidgets
+widgetsnbextension
+jupyterlab
+webio_jupyter_extension
