--- a/binder/requirements.txt
+++ b/binder/requirements.txt
@@ -1,8 +1,9 @@
 # Python packages for Binder (classic Notebook + RISE + widgets)
 
-notebook
-rise
-ipywidgets
-widgetsnbextension
-jupyterlab
+notebook==6.5.7
+nbclassic>=1.0.0
+rise==5.7.1
+ipywidgets==8.1.3
+widgetsnbextension==4.0.11
+jupyterlab>=4
 webio_jupyter_extension
