--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,10 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 LoggingExtras = "e6f89c97-d47a-5376-807f-9c37f3926c36"
 MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
@@ -58,6 +62,7 @@ LinearAlgebra = "1.11.0"
 Logging = "1.11.0"
 LoggingExtras = "1.1.0"
 MacroTools = "0.5.16"
+Makie = "0.24.6"
 Measurements = "2.11.0"
 Pkg = "1.11.0"
 PkgTemplates = "0.7.56"
