--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,6 @@ DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 ForceImport = "9dda63f9-cce7-5873-89fa-eccbb2fffcde"
 Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GetDP = "dbfd83e6-7aba-450b-9c2b-93ccd973023a"
 Gmsh = "705231aa-382f-11e9-3f0c-b7cb4346fdeb"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
@@ -39,10 +38,14 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
-WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [sources]
 GetDP = {rev = "main", url = "https://github.com/Electa-Git/GetDP.jl"}
+
+[weakdeps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
+
 
 [compat]
 CSV = "0.10.15"
